--- a/data/testimonial_authors.yml
+++ b/data/testimonial_authors.yml
@@ -10,4 +10,9 @@
 - name: Sarah Jammernegg
   position: Consultante & Facilitatrice
   picture: sarah.jpg
-  testimonial: "Guillaume est doté d'atouts très complémentaires : des compétences techniques pointues sur des sujets variés, une très bonne approche pédagogique, sans oublier d'avoir une vision stratégique de ses sujets tout en étant capable d'initiatives. C'est également quelqu'un à l'écoute des autres, curieux et très ouvert d'esprit. Nous organisons ensemble des événements sur lesquels il fait preuve de créativité et d'un grand sens de l'organisation - le tout sans stress ! C'est un réel plaisir de travailler avec lui :-)"
+  testimonial: "Guillaume est doté d'atouts très complémentaires : des compétences techniques pointues sur des sujets variés, une très bonne approche pédagogique, sans oublier d'avoir une vision stratégique de ses sujets tout en étant capable d'initiatives. C'est également quelqu'un à l'écoute des autres, curieux et très ouvert d'esprit. C'est un réel plaisir de travailler avec lui :-)"
+
+- name: Rémy Lecostey
+  position: Développeur Web @ Phenix Digital
+  picture: remy.jpg
+  testimonial: J'ai fais la connaissance de Guillaume dans le cadre de notre formation au Wagon Nantes. Son esprit d'analyse, ses compétences techniques et humaines, font de lui une personne avec qui il est très agréable de travailler. C'est à coup sûr que Guillaume saura mener à bien les projets que vous lui confierez.
