--- a/data/testimonial_authors.yml
+++ b/data/testimonial_authors.yml
@@ -10,7 +10,7 @@
 - name: Sarah Jammernegg
   position: Consultante & Facilitatrice
   picture: sarah.jpg
-  testimonial: "Guillaume est doté d'atouts très complémentaires : des compétences techniques pointues sur des sujets variés, une très bonne approche pédagogique, sans oublier d'avoir une vision stratégique de ses sujets tout en étant capable d'initiatives. C'est également quelqu'un à l'écoute des autres, curieux et très ouvert d'esprit. C'est un réel plaisir de travailler avec lui :-)"
+  testimonial: Guillaume est doté d'atouts très complémentaires : des compétences techniques pointues sur des sujets variés, une très bonne approche pédagogique, sans oublier d'avoir une vision stratégique de ses sujets tout en étant capable d'initiatives. C'est également quelqu'un à l'écoute des autres, curieux et très ouvert d'esprit. C'est un réel plaisir de travailler avec lui :-)
 
 - name: Rémy Lecostey
   position: Développeur Web @ Phenix Digital
